fixed alignment

--- a/style.css
+++ b/style.css
@@ -119,3 +119,9 @@ img{
     width: 35vw;
     height: 40vh;
 }
+
+.wrapper{
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+}
